--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,10 @@
     "manifest_version": 2,
     "author": "Timo Schinkel",
     "version": "0.1",
-    "name": "Steven Kruijswijk Coefficient",
-    "description": "Calculates your Steven Kruijswijk Coefficient for Strava rides. Source: https://github.com/timoschinkel/skc",
+    "name": "Steven Kruijswijk Coefficient",    
+    "short_name": "SKC",
+    "description": "Calculates your Steven Kruijswijk Coefficient for Strava rides.",
+    "homepage_url": "https://github.com/timoschinkel/skc",
     "content_scripts": [
         {
             "matches": ["https://www.strava.com/activities/*"],
