--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,7 +1,7 @@
 {
     "manifest_version": 2,
     "author": "Timo Schinkel",
-    "version": "0.1",
+    "version": "0.1.0",
     "name": "Steven Kruijswijk Coefficient",    
     "short_name": "SKC",
     "description": "Calculates your Steven Kruijswijk Coefficient for Strava rides.",
@@ -9,7 +9,7 @@
     "content_scripts": [
         {
             "matches": ["https://www.strava.com/activities/*"],
-            "js": ["src/inject_into_strava.js"]
+            "js": ["content_scripts/strava.js"]
         }
     ]
 }
