--- a/manifest.json
+++ b/manifest.json
@@ -11,5 +11,10 @@
             "matches": ["https://www.strava.com/activities/*"],
             "js": ["src/inject_into_strava.js"]
         }
-    ]
+    ],
+    "icons": { 
+        "16": "assets/16x16.png",
+        "48": "assets/48x48.png",
+        "128": "assets/128x128.png" 
+    }
 }
